   following code is thus valid:
	(defun c-sin (x)
	  (ffi:clines "#include <math.h>")
	  (ffi:c-inline (x) (:double) :double "sin(#0)" :one-liner t))

 - Minimized the number of headers included by ecl/ecl.h. In particular,
   stdio.h, inittypes.h and pthread.h are no longer used.

 - When a compiler finds a literal standard object, the load and initialization
   forms it generates are now closer to the first reference to the object. This
   allows to have, in the same file, a class definition and a constant which
   is an object of that class.

 - Support for hierarchical package names, as in Allegro Common-Lisp.

 - The debugger now prints a list of available restarts.

 - Added restarts to the errors signaled by several functions: SIN, COS, EXP,
   EXPT, TAN, TANH, SINH, COSH, LOG, ATAN, RATIONAL, NUMERATOR, DENOMINATOR,
   FLOOR, CEILING, ROUND, TRUNCATE, FLOAT-PRECISION, FLOAT-SIGN, DECODE-FLOAT,
   SCALE-FLOAT, FLOAT-RADIX, FLOAT-DIGITS, INTEGER-DECODE-FLOAT, REALPART,
   IMAGPART, COMPLEX, etc

 - DIGIT-CHAR-P and DIGIT-CHAR will signal an error if the radix is not an
   integer value between 2 and 36, both included.

 - C functions which disappear: si_set_compiled_function_name(),
   si_extended_string_concatenate(), assert_type_string(),
   assert_type_character(), assert_type_symbol().

 - Lisp functions which disappear: si:set-compiled-function-name,
   si:extended-string-concatenate.

 - New C functions: ecl_stream_to_handle(), ecl_base_char_code(),
   ecl_type_error(), ecl_check_cl_type(), ecl_check_type_string(),
   ecl_fixnum_in_range().

 - New Lisp functions: si:wrong-type-argument.

 - Functions renamed: backup_fopen() -> ecl_backup_fopen()
   char_code() -> ecl_char_code(), cl_log1() -> ecl_log1(),
   cl_log2() -> ecl_log2(), NUMBER_TYPE() -> ECL_NUMBER_TYPE_P()

* Contributed code:

 - New examples: cmdline/ls.lsp, ffi/uffi.lsp, ffi/cffi.lsp

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***