@@ -194,42 +194,3 @@ si_structurep(cl_object s)
 	else
 		return Cnil;
 }
-
-cl_object
-si_rplaca_nthcdr(cl_object x, cl_object idx, cl_object v)
-{
-/*
-	Used in DEFSETF forms generated by DEFSTRUCT.
-	(si:rplaca-nthcdr x i v) is equivalent to 
-	(progn (rplaca (nthcdr i x) v) v).
-*/
-	cl_fixnum i;
-	cl_object l;
-
-	assert_type_cons(x);
-	for (i = fixnnint(idx), l = x;  i > 0; --i) {
-		l = CDR(l);
-		if (endp(l)) FEtype_error_index(x, idx);
-	}
-	CAR(l) = v;
-	@(return v)
-}
-
-cl_object
-si_list_nth(cl_object idx, cl_object x)
-{
-/*
-	Used in structure access functions generated by DEFSTRUCT.
-	si:list-nth is similar to nth except that
-	(si:list-nth i x) is error if the length of the list x is less than i.
-*/
-	cl_fixnum i;
-	cl_object l;
-
-	assert_type_cons(x);
-	for (i = fixnnint(idx), l = x;  i > 0; --i) {
-		l = CDR(l);
-		if (endp(l)) FEtype_error_index(x, idx);
-	}
-	@(return CAR(l))
-}
