@@ -1124,7 +1124,6 @@ cl_symbols[] = {
 {SYS_ "INTERPRETER-STACK", SI_ORDINARY, si_interpreter_stack, -1, OBJNULL},
 {SYS_ "LINK-FROM", SI_ORDINARY, NULL, -1, OBJNULL},
 {SYS_ "LINK-TO", SI_ORDINARY, NULL, -1, OBJNULL},
-{SYS_ "LIST-NTH", SI_ORDINARY, si_list_nth, 2, OBJNULL},
 {SYS_ "LOAD-SOURCE", SI_ORDINARY, si_load_source, 3, OBJNULL},
 {SYS_ "LOGICAL-PATHNAME-P", SI_ORDINARY, si_logical_pathname_p, 1, OBJNULL},
 {SYS_ "MACRO", SI_ORDINARY, NULL, -1, OBJNULL},
@@ -1160,7 +1159,6 @@ cl_symbols[] = {
 {SYS_ "REPLACE-ARRAY", SI_ORDINARY, si_replace_array, 2, OBJNULL},
 {SYS_ "RESET-STACK-LIMITS", SI_ORDINARY, si_reset_stack_limits, 0, OBJNULL},
 {SYS_ "ROW-MAJOR-ASET", SI_ORDINARY, si_row_major_aset, 3, OBJNULL},
-{SYS_ "RPLACA-NTHCDR", SI_ORDINARY, si_rplaca_nthcdr, 3, OBJNULL},
 {EXT_ "RUN-PROGRAM", SI_ORDINARY, si_run_program, -1, OBJNULL},
 {SYS_ "SAFE-EVAL", SI_ORDINARY, si_safe_eval, -1, OBJNULL},
 {SYS_ "SCH-FRS-BASE", SI_ORDINARY, si_sch_frs_base, 2, OBJNULL},
