@@ -1124,7 +1124,6 @@ cl_symbols[] = {
 {SYS_ "INTERPRETER-STACK","si_interpreter_stack"},
 {SYS_ "LINK-FROM",NULL},
 {SYS_ "LINK-TO",NULL},
-{SYS_ "LIST-NTH","si_list_nth"},
 {SYS_ "LOAD-SOURCE","si_load_source"},
 {SYS_ "LOGICAL-PATHNAME-P","si_logical_pathname_p"},
 {SYS_ "MACRO",NULL},
@@ -1160,7 +1159,6 @@ cl_symbols[] = {
 {SYS_ "REPLACE-ARRAY","si_replace_array"},
 {SYS_ "RESET-STACK-LIMITS","si_reset_stack_limits"},
 {SYS_ "ROW-MAJOR-ASET","si_row_major_aset"},
-{SYS_ "RPLACA-NTHCDR","si_rplaca_nthcdr"},
 {EXT_ "RUN-PROGRAM","si_run_program"},
 {SYS_ "SAFE-EVAL","si_safe_eval"},
 {SYS_ "SCH-FRS-BASE","si_sch_frs_base"},
