@@ -313,8 +313,7 @@ Does not check if the third gang is a single-element list."
 (defun setf-structure-access (struct type index newvalue)
   (declare (si::c-local))
   (case type
-    (LIST `(sys:rplaca-nthcdr ,struct ,index ,newvalue))
-    (VECTOR `(sys:elt-set ,struct ,index ,newvalue))
+    ((LIST VECTOR) `(sys:elt-set ,struct ,index ,newvalue))
     (t `(sys::structure-set ,struct ',type ,index ,newvalue))))
 
 (defun setf-expand (l env)
