@@ -153,12 +153,15 @@ ECL 1.0:
  - DIGIT-CHAR-P and DIGIT-CHAR will signal an error if the radix is not an
    integer value between 2 and 36, both included.
 
+ - The slot accessors for structures with type VECTOR or LIST now rely on
+   the standard function ELT, instead of si:list-nth and si:rplaca-nthcdr.
+
  - C functions which disappear: si_set_compiled_function_name(),
    si_extended_string_concatenate(), assert_type_string(),
    assert_type_character(), assert_type_symbol().
 
  - Lisp functions which disappear: si:set-compiled-function-name,
-   si:extended-string-concatenate.
+   si:extended-string-concatenate, si:list-nth, si:rplaca-nthcdr.
 
  - New C functions: ecl_stream_to_handle(), ecl_base_char_code(),
    ecl_type_error(), ecl_check_cl_type(), ecl_check_type_string(),
